2007-10-09  Nestor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Put parenthesis and dollar in correct order for avoid the
	make self-test fail.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* framework.mdp: Now built with 2.0 rutime.

2007-09-25  Nestor Salceda  <nestor.salceda@gmail.com>

	* Runner.cs: Implemented the inclusion and exclusion of rules.

2007-09-14  Nestor Salceda  <nestor.salceda@gmail.com>

	* gendarme-framework.pc.in:  The framework will be installed in
	${prefix}/lib/gendarme not in ${prefix}/lib/Gendarme.Framework.  It
	works correctly now.

2007-09-03  Nestor Salceda  <nestor.salceda@gmail.com>

	* RuleCollection.cs: Removed the indexer with name as parameter.

2007-08-31  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* gendarme-framework.pc.in, Makefile.am: Install Gendarme.Framework to
	be reusable (pkg-config) with other runners.

2007-03-12  Jb Evain  <jbevain@gmail.com>

	* IRule.cs, Runner.cs: Simplify the rules interface.

2007-03-01  Jb Evain  <jbevain@gmail.com>

	* Runner.cs: Do some refactoring.

2006-11-23  Sebastien Pouliot  <sebastien@ximian.com>

	* Runner.cs: I forgot that constructors were kept apart from methods.
	Rules will now be executed against all type's constructors as well.

2006-11-06  Sebastien Pouliot  <sebastien@ximian.com>

	* framework.mdp: Update to add new file.
	* Gendarme.Framework.csproj: Update to add new file.
	* Makefile.am: Update to add new file.
	* Message.cs: Reformat source to follow Mono source style. Ensure that
	ToString works if a Location is null (e.g. rules on assemblies and 
	modules may not have a location).
	* MessageCollection.cs: Add new ctor that accept a Message. Easier to
	use when returning a collection with a single message.
	* MessageType.cs: New file. Moved enum from Message.cs.
	* Runner.cs: Don't try to create abstract rules.

2006-10-09  Sebastien Pouliot  <sebastien@ximian.com>

	* Runner.cs: Remove Violations.Reset(); from Process as it's reset the 