@@ -1,3 +1,8 @@
+2007-11-29  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* RuleInformation.cs: Remove ReadOnly property.
+	* RuleInformationManager.cs: Remove usage for ReadOnly.
+
 2007-10-09  Nestor Salceda  <nestor.salceda@gmail.com>
 
 	* Makefile.am: Put parenthesis and dollar in correct order for avoid the
